--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PsycoRact</title>
 
+    <link rel="icon" href="rotaractLogo.ico"/>
     <!-- aos css file cdn link  -->
     <link
       rel="stylesheet"
