--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <title>PsycoRact</title>
 
     <link rel="icon" href="rotaractLogo.ico"/>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- aos css file cdn link  -->
     <link
       rel="stylesheet"
