--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PsycoRact</title>
+    <title>WeCare</title>
 
-    <link rel="icon" href="rotaractLogo.ico"/>
+    <link rel="icon" href="wecarelogo.png"/>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <!-- aos css file cdn link  -->
     <link
       rel="stylesheet"
@@ -36,11 +42,13 @@
     <!-- custom css file link  -->
     <link rel="stylesheet" href="./assets/css/style.css" />
     <!-- =============== Bootstrap Core CSS =============== -->
-    <link rel="stylesheet" href="./assets/css/bootstrap.min.css" type="text/css" />
-    
+    <link
+      rel="stylesheet"
+      href="./assets/css/bootstrap.min.css"
+      type="text/css"
+    />
   </head>
   <body>
-  
     <div id="root"></div>
   </body>
 
